--- a/src/app.android.scss
+++ b/src/app.android.scss
@@ -1,7 +1,9 @@
 // Import app variables
 @import 'app-variables';
 
+// Place any CSS rules you want to apply only on Android here
+@import '~nativescript-theme-core/core';
+@import '~nativescript-theme-core/aqua';
+
 // Import common styles
 @import 'app-common';
-
-// Place any CSS rules you want to apply only on Android here
