--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+[hidden] { display: none !important; transition: all .3s;}
+
+//.mat-snack-bar-container {
+//  min-width: 550px !important;
+//  .mat-simple-snackbar {
+//    font-size: 1.5em;
+//  }
+//  .mat-simple-snackbar {
+//    font-size: 1.5em;
+//  }
+//  .mat-simple-snackbar-action button {
+//    font-size: 0.7em;
+//  }
+//}
