--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -1,15 +1,26 @@
-<div class="p-20">
-    <button (click)="onStart($event)" mat-raised-button color="primary">Начать соревнования</button>
-</div>
-<div class="p-20">
-    <ngx-timepicker-field #picker
-                          [format]="24"
-                          [defaultTime]="start_time.format('HH:mm')"></ngx-timepicker-field>
-</div>
+<mat-card class="m-20">
+    <mat-card-content *ngIf="!hide_start_time">
+        <button (click)="onStart($event)" mat-raised-button color="primary" class="m-20">Начать соревнования</button>
+        <ngx-timepicker-field #picker
+                              [format]="24"
+                              [defaultTime]="start_time.format('HH:mm')" class="m-20 in-row"></ngx-timepicker-field>
+    </mat-card-content>
+    <mat-card-content>
+        <mat-form-field class="p-20">
+            <input matInput (keyup)="applyFilter($event, 'str')" placeholder="Фильтр">
+            <mat-hint>По фамилии или номеру участника</mat-hint>
+        </mat-form-field>
+        <div class="p-20 mat-form-field">
+            <label id="radio-group-classes">Классы участников</label>
+            <mat-radio-group [ngModel]="filter.class" (ngModelChange)="applyFilter($event, 'class')"  aria-labelledby="radio-group-classes" aria-label="Классы участников">
+                <mat-radio-button class="m-r-10" value="">Все</mat-radio-button>
+                <mat-radio-button class="m-r-10" value="open">Open</mat-radio-button>
+                <mat-radio-button class="m-r-10" value="hobby">Hobby</mat-radio-button>
+            </mat-radio-group>
+        </div>
+    </mat-card-content>
+</mat-card>
 
-<mat-form-field class="p-20">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Фильтр">
-</mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="place">
@@ -19,7 +30,12 @@
 
     <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
-        <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+        <td mat-cell *matCellDef="let element"><b>{{element.number}}</b></td>
+    </ng-container>
+
+    <ng-container matColumnDef="class">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Class</th>
+        <td mat-cell *matCellDef="let element"> {{element.athlet.class}} </td>
     </ng-container>
 
     <ng-container matColumnDef="athlet">
@@ -33,9 +49,6 @@
             </small><br>
             <small>
                 г. {{element.athlet.city}}
-            </small>
-            <small>
-                тел. {{element.athlet.phone}}
             </small>
         </td>
     </ng-container>
@@ -51,7 +64,8 @@
         </th>
         <td mat-cell *matCellDef="let element" [ngSwitch]="element.marks[y]">
       <span *ngSwitchDefault [class.active]="element.last_created == element.marks[y].created">
-        <mat-icon aria-hidden="false" aria-label="Clock">av_timer</mat-icon>{{ diffTime(element.marks[y].created) }}<br>
+        <mat-icon aria-hidden="false" aria-label="Clock">av_timer</mat-icon>
+          {{ diffTime(element.marks[y].created) }}<br>
         <small>
             {{ element.marks[y].created.toDate()|date:"dd.MM HH:mm:ss" }}<br>
         </small>
