--- a/src/app/web/results/results.component.scss
+++ b/src/app/web/results/results.component.scss
@@ -23,3 +23,15 @@ table {
 .p-20 {
   padding: 20px;
 }
+
+.m-20 {
+  margin: 20px;
+}
+
+.in-row {
+  display: inline-block
+}
+
+.m-r-10 {
+  margin-left: 10px;
+}
