--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span>Race Org - гонка "Сурские зори"</span>
+        <span>Race Org - гонка "Сурские зори"</span>&nbsp;&nbsp;
         <!--        <span class="example-spacer"></span>-->
         <!--        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>-->
         <!--        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>-->
+        <button mat-flat-button color="warn"
+                [disabled]="_activatedUrl == '/list'"
+                [routerLink]="['list']">Список участников</button>
         <mat-menu #appMenu="matMenu">
-            <button mat-menu-item [routerLink]="['results']">Результаты</button>
-            <button mat-menu-item [routerLink]="['list']">Список участников</button>
+<!--            <button mat-menu-item [routerLink]="['results']">Результаты</button>-->
+<!--            <button mat-menu-item [routerLink]="['list']">Список участников</button>-->
 <!--            <button mat-menu-item [routerLink]="['settings']">Настройки</button>-->
             <button mat-menu-item [routerLink]="['access/register']">Регистрация участников</button>
             <button mat-menu-item [routerLink]="['help']">Помощ</button>
