--- a/src/app/web/access/register/register.component.html
+++ b/src/app/web/access/register/register.component.html
@@ -24,8 +24,8 @@
                 <mat-label>Класс участника</mat-label>
                 <mat-select value="hobby" formControlName="class" required>
                     <!--                    <mat-option value="lite">Lite</mat-option>-->
-                    <mat-option value="hobby">Hobby</mat-option>
-                    <mat-option value="open">Open</mat-option>
+                    <mat-option value="hobby">Hobby - сюдаже Lite</mat-option>
+                    <mat-option value="open">Open - ноже Hard</mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field class="full-width">
