--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -54,7 +54,7 @@
     </ng-container>
 
     <ng-container [matColumnDef]="def.key + '_' + y" *ngFor="let def of checkpoints; let y = index;">
-        <th mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef class="v-top p-t-2">
         <span>
             {{ def.key }}
         </span><br>
