--- a/src/app/web/results/results.component.scss
+++ b/src/app/web/results/results.component.scss
@@ -35,3 +35,15 @@ table {
 .m-r-10 {
   margin-left: 10px;
 }
+
+.p-t-2 {
+  padding-top: 4px;
+}
+
+.v-top {
+  vertical-align: top
+}
+
+.mat-header-row {
+  height: 42px;
+}
