--- a/src/app/web/help/help.component.html
+++ b/src/app/web/help/help.component.html
@@ -1,3 +1,4 @@
 <p>
-    В процессе заполнения.
+    Подтверждение телефонного номера необходимая процедура доказательства владения номером. Телефонные номера могут использоваться <b>организаторами</b> для обзвона участников соревнований
+   , sms оповещения (например глобальная рассылка об отмене соревнований в связи с погодными условиями), экстренной связи с атлетом (например при его потере)
 </p>
