--- a/src/app/athlets/athlets.component.tns.html
+++ b/src/app/athlets/athlets.component.tns.html
@@ -4,23 +4,21 @@
 </ActionBar>
 <GridLayout rows="auto, auto, *" columns="*">
     <StackLayout row="0" col="0">
-        <SearchBar [hint]="'Search by Full name'|L" [text]="searchPhrase"
+        <SearchBar [hint]="'Search by full name or number'|L" [text]="searchPhrase"
                    (textChange)="onTextChanged($event)"
                    (submit)="onSubmit($event)"
                    (loaded)="searchBarLoaded($event)"></SearchBar>
     </StackLayout>
     <StackLayout row="1" col="0">
-        <GridLayout rows="*" columns="*, auto">
-            <Button [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('Найти по метке NFC'|L) "
-                    (tap)="(activityIndicator.busy = !activityIndicator.busy)"
-                    [class.btn-primary]="!activityIndicator.busy"
-                    row="0"
-                    col="0"
-                    class="btn btn-active">
-            </Button>
-            <ActivityIndicator row="0"
-                               col="1"
-                               height="20"
+        <Button [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('Найти по метке NFC'|L) "
+                (tap)="(activityIndicator.busy = !activityIndicator.busy)"
+                [class.btn-primary]="!activityIndicator.busy"
+                row="0"
+                col="0"
+                class="btn btn-active">
+        </Button>
+        <StackLayout horizontalAlignment="center" [visibility]="activityIndicator.busy ? 'visible' : 'collapse'" verticalAlignment="center">
+            <ActivityIndicator height="20"
                                width="20"
                                #activityIndicator
                                (busyChange)="onBusyChanged($event)"
@@ -28,31 +26,21 @@
                                verticalAlignment="center"
                                horizontalAlignment="center"
                                class="activity-indicator m-15"></ActivityIndicator>
-        </GridLayout>
+        </StackLayout>
     </StackLayout>
 
     <ScrollView row="2" col="0">
         <ListView height="100%"
-                  [items]="athlets|filter:'fio':searchPhrase"
-                  (itemTap)="onItemTap($event)">
+                  [items]="athlets|filter:['fio', 'number']:searchPhrase">
             <ng-template let-athlet="item" let-i="index" let-odd="odd" let-even="even">
-                <StackLayout class="p-l-5 p-r-5">
-                    <Label class="title">
-                        <FormattedString>
-                            <Span [text]="athlet.number + ':  '" style="font-weight: bold; font-size: 15em"></Span>
-                            <Span [text]="athlet.fio"></Span>
-                        </FormattedString>
-                    </Label>
-                    <FlexboxLayout flexDirection="row">
-                        <Label [text]="athlet.city + '; '" class="info"></Label>
-                        <Label [text]="athlet.bike + '; '" class="info"></Label>
-                        <Label [text]="'назначено' ? athlet.nfc_id : 'не назначено'" class="info"
-                               style="color: red; font-weight: bold"></Label>
-                    </FlexboxLayout>
-                    <Label *ngIf="athlet.checkpoints"
-                           [text]="'Пройдено отметок: ' + athlet.checkpoints.length"
-                           class="info"></Label>
-                </StackLayout>
+                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *, *">
+                    <Label [text]="athlet.number" col="0" rowSpan="4" verticalAlignment="top" class="number"></Label>
+
+                    <Label [text]="'Имя: ' + athlet.fio" col="1" row="0"></Label>
+                    <Label [text]="'Марка мотоцикла: ' + athlet.bike" col="1" row="1"></Label>
+                    <Label [text]="'NFC: ' + (athlet.nfc_id ? 'назначено' : 'не назначено')" col="1" row="2" [class.alert]="!athlet.nfc_id"></Label>
+                    <Label [text]="'Пройдено отметок: ' + athlet.checkpoints.length" col="1" row="4" class="font-weight-bold"></Label>
+                </GridLayout>
             </ng-template>
         </ListView>
     </ScrollView>
