--- a/src/app/athlets/athlets.component.tns.scss
+++ b/src/app/athlets/athlets.component.tns.scss
@@ -1,1 +1,10 @@
 /* Add mobile styles for the component here.  */
+
+.number {
+  font-weight: bold;
+  font-size: 25;
+}
+
+.alert {
+  color: red;
+}
