--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,10 +5,8 @@
 .side-label{
   padding: 10;
   font-size: 16;
-  &.active {
-    background-color: #aee406
-  }
 }
-
-
+.active {
+  background-color: #aee406
+}
 
