--- a/src/app/athlets/athlets.component.tns.html
+++ b/src/app/athlets/athlets.component.tns.html
@@ -12,10 +12,10 @@
     <StackLayout row="1" col="0">
         <Button [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('Найти по метке NFC'|L) "
                 (tap)="(activityIndicator.busy = !activityIndicator.busy)"
-                [class.btn-primary]="!activityIndicator.busy"
+                [class.-primary]="!activityIndicator.busy"
                 row="0"
                 col="0"
-                class="btn btn-active">
+                class="btn">
         </Button>
         <StackLayout horizontalAlignment="center" [visibility]="activityIndicator.busy ? 'visible' : 'collapse'" verticalAlignment="center">
             <ActivityIndicator height="20"
@@ -31,15 +31,17 @@
 
     <ScrollView row="2" col="0">
         <ListView height="100%"
-                  [items]="athlets|filter:['fio', 'number']:searchPhrase">
+                  [items]="athlets|filter:['fio', 'number']:searchPhrase" style="line-height: 20px">
             <ng-template let-athlet="item" let-i="index" let-odd="odd" let-even="even">
-                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *, *">
-                    <Label [text]="athlet.number" col="0" rowSpan="4" verticalAlignment="top" class="number"></Label>
+                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *, *, *">
+                    <Label [text]="athlet.number" col="0" rowSpan="4" verticalAlignment="top" horizontalAlignment="center" class="number"></Label>
+                    <Label [text]="athlet.class" col="0" row="5" class="option" horizontalAlignment="center"></Label>
 
-                    <Label [text]="'Имя: ' + athlet.fio" col="1" row="0"></Label>
-                    <Label [text]="'Марка мотоцикла: ' + athlet.bike" col="1" row="1"></Label>
-                    <Label [text]="'NFC: ' + (athlet.nfc_id ? 'назначено' : 'не назначено')" col="1" row="2" [class.alert]="!athlet.nfc_id"></Label>
-                    <Label [text]="'Пройдено отметок: ' + athlet.checkpoints.length" col="1" row="4" class="font-weight-bold"></Label>
+                    <Label [text]="'Имя: ' + athlet.fio" col="1" row="0" class="option"></Label>
+                    <Label [text]="'Город: ' + athlet.city" col="1" row="1" class="option"></Label>
+                    <Label [text]="'Марка мотоцикла: ' + athlet.bike" col="1" row="2" class="option"></Label>
+                    <Label [text]="'NFC: ' + (athlet.nfc_id ? 'назначено' : 'не назначено')" col="1" row="3" [class.warning]="!athlet.nfc_id" class="option"></Label>
+                    <Label [text]="'Пройдено отметок: ' + athlet.checkpoints.length" col="1" row="4" class="font-weight-bold option"></Label>
                 </GridLayout>
             </ng-template>
         </ListView>
