--- a/src/app/scan/found-dialog/found-dialog.component.tns.scss
+++ b/src/app/scan/found-dialog/found-dialog.component.tns.scss
@@ -1,4 +1,6 @@
 /* Add mobile styles for the component here.  */
-.disabled {
-  color: lightgray;
+
+.number {
+  font-weight: bold;
+  font-size: 25;
 }
