--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -15,8 +15,8 @@
             (tap)="(activityIndicator.busy = !activityIndicator.busy)"
             row="1"
             col="0"
-            [class.btn-primary]="!activityIndicator.busy"
-            class="btn btn-primary btn-active"></Button>
+            [class.-primary]="!activityIndicator.busy"
+            class="btn"></Button>
     <ActivityIndicator row="2"
                        col="0"
                        height="200"
