--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -19,3 +19,34 @@
   font-weight: 900;
 }
 
+@keyframes scale {
+  from {
+    transform: scale(1, 1);
+  }
+  to {
+    transform: scale(1.5, 1.5);
+  }
+}
+
+.scale-active {
+  animation-name: scale;
+  animation-duration: 0.5;
+}
+
+.number {
+  font-weight: bold;
+  font-size: 25;
+}
+
+.option {
+  padding: 0;
+  margin: 0;
+}
+
+.warning{
+  color: orangered;
+}
+
+.odd {
+  background-color: lightgray;
+}
