--- a/src/app/competition/competition.component.tns.html
+++ b/src/app/competition/competition.component.tns.html
@@ -13,9 +13,9 @@
 
     <Button (tap)="onSetAdmin()"
             [text]="'Set this device to admin'"
-            [isEnabled]="settings.competition.admin_device.uuid != device_uuid" class="btn btn-primary"></Button>
+            [isEnabled]="settings.competition.admin_device.uuid != device_uuid" class="btn -outline"></Button>
     <Button (tap)="onJoin()"
-            [text]="'Join' + checkExists(settings.competition.devices)"
-            [isEnabled]="checkExists(settings.competition.devices)" class="btn btn-primary"></Button>
+            [text]="'Join'|L"
+            [isEnabled]="checkExists(settings.competition.devices)" class="btn -primary"></Button>
 </StackLayout>
 
