--- a/src/app/options/options.component.tns.html
+++ b/src/app/options/options.component.tns.html
@@ -5,25 +5,17 @@
 
 <ScrollView>
     <ListView height="100%"
-              itemTap="onItemTap"
               [items]="checkpoints"
               (itemTap)="onItemTap($event)">
-        <ng-template let-cp="item" let-i="index" let-odd="odd" let-even="even">
-            <StackLayout [class.active]="settings.checkpoint.key == cp.key" class="p-l-5 p-r-5">
-                <Label class="title">
-                    <FormattedString>
-                        <Span [text]="cp.key + ':  '" style="font-weight: bold; font-size: 15em"></Span>
-                        <Span [text]="cp.name"></Span>
-                    </FormattedString>
-                </Label>
-                <FlexboxLayout flexDirection="row">
-                    <Label [text]="cp.marshal + '; '" class="info"></Label>
-                    <Label [text]="cp.kind + '; '" class="info"></Label>
-                    <Label [text]="cp.device ? 'Считыватель назначен' : 'Считыватель не назначено'"
-                           [class.setup]="cp.device"
-                           class="info"></Label>
-                </FlexboxLayout>
-            </StackLayout>
+        <ng-template let-cp="item" let-i="index">
+            <GridLayout columns="*, 60" rows="*,*,*,*, *" [class.active]="settings.checkpoint.key === cp.key">
+                <Label [text]="cp.key" col="1" rowSpan="4" row="0" class="number" horizontalAlignment="center"></Label>
+                <Label [text]="'Название: ' + cp.name" col="0" row="1" class="option"></Label>
+                <Label [text]="'Маршал: ' + cp.marshal" col="0" row="2" class="option"></Label>
+                <Label [text]="'Устройство: ' + getDeviceInfo(cp.device)" col="0" row="3" [class.warning]="!cp.device" class="option"></Label>
+                <Label [text]="'Порядок: ' + cp.order" col="0" row="4" class="option"></Label>
+                <Label [text]="cp.kind" col="1" row="4" class="option" horizontalAlignment="center" ></Label>
+            </GridLayout>
         </ng-template>
     </ListView>
 </ScrollView>
