--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -1,6 +1,9 @@
 <ActionBar [title]="'Race org'">
     <NavigationButton icon="res://round_menu_black_24"
                       (tap)="onDrawerButtonTap()"></NavigationButton>
+    <ActionItem *ngIf="pending" text="Push to server" position="right">
+        <Label text="&#xf0c7;" class="far p-r-10"></Label>
+    </ActionItem>
 </ActionBar>
 <StackLayout>
     <router-outlet>
