--- a/src/app/athlets/athlets.component.tns.html
+++ b/src/app/athlets/athlets.component.tns.html
@@ -7,7 +7,7 @@
         <SearchBar [hint]="'Search by full name or number'|L" [text]="searchPhrase"
                    (textChange)="onTextChanged($event)"
                    (submit)="onSubmit($event)"
-                   (loaded)="searchBarLoaded($event)"></SearchBar>
+                   (loaded)="searchBarLoaded($event)" #searchBar></SearchBar>
     </StackLayout>
     <StackLayout row="1" col="0">
         <Button [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('Найти по метке NFC'|L) "
