--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -1,5 +1,5 @@
 <mat-card class="m-20">
-    <mat-card-content *ngIf="!hide_start_time">
+    <mat-card-content [hidden]="hide_start_time">
         <button (click)="onStart($event)" mat-raised-button color="primary" class="m-20">Начать соревнования</button>
         <ngx-timepicker-field #picker
                               [format]="24"
@@ -12,7 +12,8 @@
         </mat-form-field>
         <div class="p-20 mat-form-field">
             <label id="radio-group-classes">Классы участников</label>
-            <mat-radio-group [ngModel]="filter.class" (ngModelChange)="applyFilter($event, 'class')"  aria-labelledby="radio-group-classes" aria-label="Классы участников">
+            <mat-radio-group [ngModel]="filter.class" (ngModelChange)="applyFilter($event, 'class')"
+                             aria-labelledby="radio-group-classes" aria-label="Классы участников">
                 <mat-radio-button class="m-r-10" value="">Все</mat-radio-button>
                 <mat-radio-button class="m-r-10" value="open">Open</mat-radio-button>
                 <mat-radio-button class="m-r-10" value="hobby">Hobby</mat-radio-button>
@@ -21,8 +22,8 @@
     </mat-card-content>
 </mat-card>
 
-
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
     <ng-container *ngIf="!hide_start_time" matColumnDef="place">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Place</th>
         <td mat-cell *matCellDef="let element" [class.highlight]="element.place <= 3"> {{ element.place }} </td>
@@ -54,7 +55,7 @@
     </ng-container>
 
     <ng-container [matColumnDef]="def.key + '_' + y" *ngFor="let def of checkpoints; let y = index;">
-        <th mat-header-cell *matHeaderCellDef class="v-top p-t-2">
+        <th mat-header-cell *matHeaderCellDef class="v-top p-t-2" style="width: 70px">
         <span>
             {{ def.key }}
         </span><br>
@@ -62,18 +63,21 @@
                 {{ def.name }}
             </small>
         </th>
-        <td mat-cell *matCellDef="let element" [ngSwitch]="element.marks[y]">
+        <td mat-cell *matCellDef="let element" [ngSwitch]="!hide_start_time ? element.marks[y] : null">
       <span *ngSwitchDefault [class.active]="element.last_created == element.marks[y].created">
-        <mat-icon aria-hidden="false" aria-label="Clock">av_timer</mat-icon>
-          {{ diffTime(element.marks[y].created) }}<br>
+<!--        <mat-icon aria-hidden="false" aria-label="Clock">av_timer</mat-icon>-->
+          <!--          {{ diffTime(element.marks[y].created) }}<br>-->
+      <small>
+          {{ diffTime(element.marks[y].created) }}
+      </small>
         <small>
-            {{ element.marks[y].created.toDate()|date:"dd.MM HH:mm:ss" }}<br>
+            {{ element.marks[y].created.toDate()|date:"HH:mm:ss" }}<br>
         </small>
       </span>
             <span *ngSwitchCase="null">-</span>
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
