--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -2,4 +2,5 @@
     <Label [text]="'Всего зарегестрированно участников: ' + athlets_count"></Label>
     <Label [text]="'Класс hobby: ' + open_count"></Label>
     <Label [text]="'Класс open: ' + hobby_count"></Label>
+    <Button class="brn -primary" style="height: 100; font-size: 24; font-weight: bold" [text]="'Сканировать'|L" [nsRouterLink]="['/scan']"></Button>
 </StackLayout>
