--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -27,8 +27,7 @@
                        keyboardType="number"
                        maxLength="3"
                        col="0"
-                       row="0"
-                       style="font-size: 24; font-weight: bold"></TextField>
+                       row="0"></TextField>
             <Button [text]="'Отметить'|L"
                     (tap)="setNumberMark(textField)"
                     [isEnabled]="last_athlet ? true : false" col="1" row="0"></Button>
