--- a/src/app/web/results/results-public/results-public.component.html
+++ b/src/app/web/results/results-public/results-public.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group style="height:100%">
     <mat-tab label="Open">
         <app-results [circles]="3" [classes]="['open']"></app-results>
     </mat-tab>
